--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
   <head>
-    <h1>Hello world!</h1>
+    <title>iamzhangsan</title>
   </head>
   <body>
+    <h1>Hello world!</h1>
     <h3>This is my first page.</h3>
   </body>
 </html>
