--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <title>iamzhangsan</title>
   </head>
   <body>
-    <h1>Hello world!</h1>
-    <h3>This is my first page.</h3>
+    <center>
+      <h1>Hello world!</h1>
+      <h3>This is my first page.</h3>
+    </center>
   </body>
 </html>
