--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <center>
       <h1>Hello world!</h1>
       <h3>This is my first page.</h3>
-      <a href="https://m.youtube.com/channel/UCpKlzXntKnxffNudERjzh7g">iamzhangsan Youtube</a>
+      <a href="https://youtube.com/channel/UCUz8n82w8nWfDnwuaLb106A">iamzhangsan Youtube</a>
     </center>
   </body>
 </html>
